--- a/index.html
+++ b/index.html
@@ -98,6 +98,25 @@
             <p>Este fue un ejercicio que hice imitando a la web de la Universidad de Cádiz,
                 si quieres verlo solo tienes que hacer click en la imagen.</p>
         </div>
+
+        <div class="carta">
+            <a href="Ejercicios/DisenoDeInterfaces/index.html"><img src="./img/DisenoDeInterfaces.jpg" alt="" /></a>
+            <h4>Diseño de Interfaces Web</h4>
+            <p>En esta página os mostrare todos los ejercicios que hice en la asignatura de Diseño de Interfaces Web.</p>
+        </div>
+
+        <div class="carta">
+            <a href="Ejercicios/DesarrolloWeb/index.html"><img src="./img/DesarrolloWeb.jpg" alt="" /></a>
+            <h4>Desarrollo Web Entorno Cliente</h4>
+            <p>En esta página os mostrare todos los ejercicios que hice en la asignatura de Desarrollo Web Entorno Cliente.</p>
+        </div>
+
+        <div class="carta">
+            <a href="Ejercicios/DespliegueAplicaciones/index.html"><img src="./img/DespliegueAplicaciones.jpg" alt="" /></a>
+            <h4>Despliegue de Aplicaciones Web</h4>
+            <p>En esta página os mostrare todos los ejercicios que hice en la asignatura de Despliegue de Aplicaciones Web.</p>
+        </div>
+
         <div class="carta">
             <a href="https://youtu.be/icnWJBzCCK0"><img src="./img/video.png" alt="" /></a>
             <h4>Video Explicativo</h4>
